--- a/src/styles/colors/palette.css
+++ b/src/styles/colors/palette.css
@@ -6,6 +6,7 @@
   /* Brand */
   --indigo-500: #6366f1;
   --indigo-400: #818cf8;
+  --purple-500: #9333ea;
 
   --orange-500: #f97316;
   --orange-400: #fb923c;
